Revert "removed backface-visibility: hidden; resolve problem pixel by set correct height image"
This reverts commit 7172f6bf35eef19fc8c3f105d348292f0133f032.

# Conflicts:
#	src/app/core/home/home-page/home-page.component.scss
#	src/app/happening/components/application-wrapper/application-wrapper.component.scss
#	src/app/happening/create-happening-page/create-happening-page.component.scss
#	src/app/happening/happening-page/happening-page.component.scss
#	src/app/match-member/match-member-page/match-member-page.component.scss
#	src/app/participation-happening/participation-happening/participation-happening-page.component.scss

--- a/src/app/core/home/home-page/home-page.component.scss
+++ b/src/app/core/home/home-page/home-page.component.scss
@@ -21,13 +21,17 @@ $height-for-lk-background-bubbles: $lk-background-bubbles-image-height + 30px;
   background-image: url('src/assets/bg-bubbles.png');
   background-repeat: repeat;
   background-color: color-base('red');
+  backface-visibility: hidden;
   display: block;
 
   .bg-section {
     background-color: color-base('white');
 
     &.red {
+      background-image: url('src/assets/bg-bubbles.png');
+      background-repeat: repeat;
       background-color: color-base('red');
+      backface-visibility: hidden;
     }
   }
 
@@ -355,6 +359,7 @@ $height-for-lk-background-bubbles: $lk-background-bubbles-image-height + 30px;
       background-size: 65% auto;
       background-repeat: no-repeat;
       background-position: center;
+      backface-visibility: hidden;
       cursor: pointer;
 
       border: 2px solid color-base('white');
