--- a/src/app/happening/happening-page/happening-page.component.scss
+++ b/src/app/happening/happening-page/happening-page.component.scss
@@ -246,6 +246,7 @@
 
   .bg-bubbles__image {
     background-image: url('src/assets/bubbles-shadow.png');
+    backface-visibility: hidden;
     width: 100%;
     height: 100px;
 
